2.59 (unreleased)
-----------------

- Nothing changed yet.


2.58 (2018-07-31)
-----------------

- Add ability to identify simcom clients now that we have transitioned to python 3.


2.57 (2018-07-07)
-----------------

- Implement taxi data logging functionality.


2.56 (2018-07-07)
-----------------

- Bump version of geotool-api as required by the license report parser. Although not currently used it's causing import errors.


2.55 (2018-07-07)
-----------------

- Add ability to trigger configuration update through the master api.
- Don't send config on every login.
- Add ability to send C91 command based on peripheral_configuration from the geotool api.


2.54 (2018-06-17)
-----------------

- Bump version of geotool api to bring in fix to firmware download filtering.


2.53 (2018-06-17)
-----------------

- Bump version of geotool api to bring in imei filtering fix on getting device firmware version.
- Fix up log entry showing not able to get firmware version.


2.52 (2018-06-16)
-----------------

- Bump version of meitrack parser to bring in taxi meter message changes.


2.51 (2018-06-13)
-----------------

- Add ability to specify update host and port for meitrack device firmware upgrades.


2.50 (2018-06-13)
-----------------

- Try again to stop sending the continue image transfer commands


2.49 (2018-06-13)
-----------------

- Remove the logic to continue image transfers as the whole image should be getting sent by default now
- Add upload firmware script


2.48 (2018-06-12)
-----------------

- If we receive an FC7 command when not updating then send cancel FC4
- Standardise the logging of data payloads in and out of scs
- Increase log timeout for the gprs queue. Was 10s which is a little too small.
- Bump version of meitrack parser to bring in firmware update patches. At this point an update should be possible from the ui.


2.47 (2018-06-11)
-----------------

- Fix celery task for firmware update.
- Set all celery tasks to broadcast.