@@ -230,7 +230,7 @@ def chat_server(port, task_queue, result_queue, disconnect_unidentified, wait_ti
                         connection.settimeout(0.150)
                         imei_line = connection.recv(1024)
                         if not imei_line:
-                            logger.error("No data on connect.")
+                            logger.info("No data on connect.")
                             if disconnect_unidentified:
                                 logger.error("Closing socket as it has not been identified")
                                 close_socket(connection)
@@ -328,7 +328,7 @@ def chat_server(port, task_queue, result_queue, disconnect_unidentified, wait_ti
                                         logger.error("Spurious data or login attempt: %s", data)
                                         identify_client(sock, task_queue, data)
                                     else:
-                                        logger.error("No data on initial connect. Closing: %s", sock)
+                                        logger.info("No data on initial connect. Closing: %s", sock)
                                         close_socket(sock)
                                         send_to_masters("Client is offline. Closing: %s\n" % (sock,))
                                 # at this stage, no data means probably the connection has been broken
